--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.3.4",
     "expo": "^48.0.0",
+    "expo-app-loading": "^2.1.1",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
@@ -18,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.14",
+    "react-native-asset": "^2.1.1",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
@@ -40,5 +45,5 @@
   "name": "jobsift",
   "version": "1.0.0",
   "private": true,
-  "main": "index.js"
+  "main": "./app.js"
 }
