--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "expo-app-loading": "^2.1.1",
     "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
-    "expo-linking": "~4.0.1",
     "expo-router": "^1.0.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
@@ -27,7 +26,10 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.11"
+    "react-native-web": "~0.18.11",
+    "expo-linking": "~4.0.1",
+    "expo-web-browser": "~12.1.1",
+    "expo-auth-session": "~4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
